[Design] Fix z-index

--- a/template/source/css/container.css
+++ b/template/source/css/container.css
@@ -1,5 +1,6 @@
 .container-body{
     max-width: 1200px;
     /* background-color: #fff; */
-    margin: 130px auto auto auto;
+    margin: 135px auto auto auto;
+    /* height: 10000px; */
 }
