--- a/template/source/css/footer.css
+++ b/template/source/css/footer.css
@@ -2,6 +2,7 @@
     background-image: linear-gradient(var(--color-main), var(--color-fourth));
     padding: 5px;
     font-size: 16px;
+    z-index: 999;
 }
 
 .footer ul {
